--- a/app/webroot/css/forms.css
+++ b/app/webroot/css/forms.css
@@ -2,14 +2,13 @@
  * Global set
  */
 fieldset{
-	background-color: lavender;
+	background-color: white;
 	border:none;
-	border:solid black 1px;
 }
 
 fieldset legend{
 	/*Style*/
-	background-color: lightgrey;
+	background-color: #f39c12;
 	font-size: 1.3em;
 
 	/*Position*/
