--- a/app/webroot/css/global.css
+++ b/app/webroot/css/global.css
@@ -7,7 +7,7 @@
 }
 
 body{
-	background-color:#ecf0f1;
+	background-color:white;
 	font-family: "Avantgarde", sans-serif;
 
 }
@@ -15,6 +15,7 @@ body{
 div.content{
 	margin-top:5em;
 	display: block;
+	padding-left: 2em;
 }
 
 /*
@@ -35,15 +36,19 @@ a:hover{
 	color:#ecf0f1;
 }
 
+div.content div.textDisplay, div.tableDisplay{
+	border:solid #3498db 1px;
+	background-color: #ecf0f1;
+}
+
 div.content div.textDisplay{
-	background-color: white;
 	width:60%;
 	padding:1em;
 	float:left;
 }
 
 div.rightDisplay{
-	width:30%;
+	width:33%;
 	float:right;
 	margin-right: 2em;
 }
@@ -54,15 +59,14 @@ div.textDisplay p{
 }
 
 div.tableDisplay{
-	background-color: white;
 	padding: 1em;
 	margin-bottom: 1em;
 }
 
 div.tableDisplay table{
 	font-size: 15px;
-}
-
-div.textDisplay, div.rightDisplay{
-	margin-left: 2em;
+	margin-left: auto;
+	margin-right: auto;
+	width:100%;
+	max-width: 300px;
 }
