--- a/app/webroot/css/global.responsive.css
+++ b/app/webroot/css/global.responsive.css
@@ -1,18 +1,20 @@
 @media (max-width: 700px) {
 
-
+div.content{
+	padding:1em;
+	margin-bottom: 0;
+	margin-top:3em;
+}
 div.content div.textDisplay{
 	margin: 0;
 	margin-bottom:1em;
-	margin-left: 10%;
 	padding: 1em;
-	width:80%;
+	width:95%;
 	float:none;
 }
 div.rightDisplay{
 	margin: 0;
-	margin-left: 10%;
-	width:85%;
+	width:100%;
 	float:none;
 }
 
