--- a/app/webroot/css/navbar.css
+++ b/app/webroot/css/navbar.css
@@ -43,9 +43,7 @@ ul.navbar li:hover{
 */
 div.submenu{
 	list-style: none;
-	float;right;
-	margin-bottom: 1em;
 	padding: 0.3em;
-	width:auto;
-	text-align: center;
+	position: fixed;
+	top: 3em;
 }
