Début de gestion des authentifications, facile a reprendre

--- a/app/webroot/css/forms.css
+++ b/app/webroot/css/forms.css
@@ -28,10 +28,8 @@ fieldset div.input input, fieldset div.input select{
 
 fieldset input[type="submit"]{
 	/*Postion*/
-	position: relative;
-	bottom: 169px;
-	left:275px;
 	color:transparent;
+	float:right;
 
 	/*style*/
 	background-image: url("/BYOMusic/img/login.png");
