--- a/app/webroot/css/global.css
+++ b/app/webroot/css/global.css
@@ -38,6 +38,7 @@ a:hover{
 div.content div.textDisplay, div.tableDisplay{
 	border:solid #3498db 1px;
 	background-color: #ecf0f1;
+	box-shadow: 0px 2px 2px #888888;
 }
 
 div.content div.textDisplay{
