--- a/app/webroot/css/global.css
+++ b/app/webroot/css/global.css
@@ -7,7 +7,6 @@
 }
 
 body{
-	background-color:white;
 	font-family: "Avantgarde", sans-serif;
 
 }
@@ -32,14 +31,12 @@ a{
 }
 
 a:hover{
-	color:#ecf0f1;
+	color:blue;
 }
 
 
-div.content div.textDisplay, div.tableDisplay, fieldset{
-	border:solid #3498db 1px;
-	background-color: #ecf0f1;
-	box-shadow: 0px 2px 2px #888888;
+div.tableDisplay, fieldset{
+
 }
 
 div.content div.textDisplay{
