--- a/app/webroot/css/navbar.css
+++ b/app/webroot/css/navbar.css
@@ -2,7 +2,7 @@ ul.navbar{
 	/*Color*/
 	/*background-color:#e74c3c; 
 	*/
-	background-color: #2980b9;
+	background-color: #FF1C1C;
 	/*Size*/
 	height: 3em;
 	width:100%;
@@ -49,7 +49,6 @@ div.submenu{
 	right: 0;
 	padding:.5em;
 	padding-right: 0.2em;
-	background-color: #29B9AA;
 }
 
 div.submenu ul li{
