--- a/app/webroot/css/navbar.css
+++ b/app/webroot/css/navbar.css
@@ -2,7 +2,7 @@ ul.navbar{
 	/*Color*/
 	/*background-color:#e74c3c; 
 	*/
-	background-color: #FF1C1C;
+	background-color: rgb(41, 128, 185);
 	/*Size*/
 	height: 3em;
 	width:100%;
