--- a/app/webroot/css/navbar.css
+++ b/app/webroot/css/navbar.css
@@ -2,27 +2,37 @@ ul.navbar{
 	/*Color*/
 	/*background-color:#e74c3c; 
 	*/
-	background-color: rgb(41, 128, 185);
+	/*185*/
+	background-color: rgb(41, 100, 255);
 	/*Size*/
-	height: 3em;
+	height: 40px;
+	display: block;
 	width:100%;
 
 	/*Position*/
-	position:top;
 	position:fixed;
-	top:0px;
+	top:0;
 }
 
 ul.navbar li{	
 
 	/*Position*/
-	padding-top: 1em;
-	padding-left: 1em;
 	display: inline-block;
-
+	position: relative;
+	padding-left: 5px;
+	height: 100%;
+	vertical-align: middle;
 	/*Text*/
 	color:black;
 	font-family:"Avantgarde",sans-serif;
+}
+
+ul.navbar li a{
+	vertical-align: bottom;
+	text-align: center;
+	display: block;
+	height: 100%;
+	padding-top:10px;
 }
 
 ul.navbar li.accountButtons{
@@ -49,6 +59,8 @@ div.submenu{
 	right: 0;
 	padding:.5em;
 	padding-right: 0.2em;
+	/* 166 */
+	background-color: rgba(149, 165, 166,0.2);
 }
 
 div.submenu ul li{
