--- a/app/webroot/css/global.responsive.css
+++ b/app/webroot/css/global.responsive.css
@@ -1,21 +1,23 @@
 @media (max-width: 700px) {
 
-div.content{
-}
-div.content div.textDisplay{
+
+div.content div.titleDisplay{
 	margin-bottom:1em;
 	padding: 1em;
-	width:90%;
+	display: block;
+	margin: 0;
 	float:none;
 }
 div.rightDisplay{
 	margin: 0;
 	width:95%;
+	display: block;
 	float:none;
 }
 
 div.tableDisplay{
 	margin: 0;
+	display: block;
 	margin-bottom: 1em;
 }
 }
