--- a/app/webroot/css/navbar.css
+++ b/app/webroot/css/navbar.css
@@ -65,7 +65,7 @@ ul.navbar li:hover{
 div.submenu{
 	list-style: none;
 	position: fixed;
-	top: 3em;
+	top: 40px;
 	height: 100%;
 	right: 0;
 	padding:.5em;
