webservice sur la page d'acceuil

--- a/app/webroot/css/forms.css
+++ b/app/webroot/css/forms.css
@@ -1,5 +1,4 @@
-li.logInForm{
-	padding:10px;
+ul.navbar li{
 	color:white;
 }
 
@@ -7,7 +6,7 @@ li.logInForm:hover{
 	background-color: none;
 }
 
-li.logInForm input{
+ul li input{
 	width:8em;
 	border:none;
 }
@@ -19,4 +18,8 @@ li.logInForm input[type='submit']{
 
 li.logInForm label{
 	margin-right: 10px;
+}
+
+div.select2-container{
+	width:40px;
 }
