--- a/app/webroot/css/global.css
+++ b/app/webroot/css/global.css
@@ -10,8 +10,9 @@
 body{
 	margin: 0;
 	top:0;
+	width:100%;
 	font-family: "Avantgarde", sans-serif;
-	background-image: url(../img/wallpaper.jpg);
+	background-image: url(../img/wallpaperHD.jpg);
 	background-repeat: no-repeat;
 
 	-webkit-background-size: 100%;
@@ -23,7 +24,9 @@ body{
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    
+
+    height: 200%;
+    font-family: 'Raleway', sans-serif;;
 }
 
 div.content{
@@ -48,15 +51,6 @@ p{
 	margin-left: 2em;
 }
 
-a{
-	text-decoration: none;
-	color:white;
-}
-
-a:hover{
-}
-
-
 div.tableDisplay, fieldset{
 
 }
@@ -66,14 +60,13 @@ div.content div.titleDisplay{
 	margin-left: 2%;
 	padding: 2%;
 	float:left;
-	/*rgb(52, 152, 219)*/
+	background-color: rgba(155, 89, 182,1.0);
+	color:white;
 	display: inline;
-	background-color: rgba(52, 152, 219,0.5);
 }
 
 
 div.content div.textDisplay, div.content div.by2{
-	background-color: #ecf0f1;
 	border:solid black 1px;	
 }
 
@@ -104,12 +97,12 @@ div.textDisplay p{
 div.tableDisplay{
 	padding: 1em;
 	margin-bottom: 1em;
-	background-color: #2980b9;
 	border:solid black 1px;
+	background-color: rgba(155, 89, 182,0.7);
+	color:white;
 }
 
 div.tableDisplay table{
-	font-size: 15px;
 	margin-left: auto;
 	margin-right: auto;
 	width:100%;
