--- a/app/webroot/css/forms.css
+++ b/app/webroot/css/forms.css
@@ -1,3 +1,54 @@
+fieldset{
+	border:none;
+	width:300px;
+}
+
+fieldset div.input{
+	margin:0 10px 10px 0; 
+}
+
+fieldset div.input input,fieldset div.input select{
+	float: right; 
+	width:50%;
+	border:none;
+	background-color: white;
+}
+
+
+fieldset div.submit input[type='submit']{
+	width:auto;
+	border: none;
+	padding: 0.2em;
+	width: 60px;
+	background-color: rgba(52, 73, 94,1.0);
+	color:white;
+	font-weight: 300;
+}
+
+
 div.select2-container{
 	width:50px;
+}
+
+form div.input{
+	width:300px;
+}
+
+form div.checkbox{
+	width:120px;
+}
+
+form div.input input{
+	float:right;
+	border: none;
+}
+
+form div.submit input{
+	border: none;
+	background-color: rgba(0,0,0,0);
+	color: #8e44ad;;
+	font-size: 20px;
+}
+form div.submit input:hover{
+	cursor: pointer;
 }
