--- a/app/webroot/css/message.css
+++ b/app/webroot/css/message.css
@@ -1,10 +1,12 @@
 div.message{
 	/*Style*/
+	float right;
 	background-color:rgba(52, 152, 219,1.0);
 	/*Position*/
+	position:absolute;
+	margin-top: 4px;
 	padding: 2em;
-	width: 30%;
-	margin-left: 35%;
+	right:0;
 }
 
 
