--- a/app/webroot/css/navbar.css
+++ b/app/webroot/css/navbar.css
@@ -1,5 +1,5 @@
 ul.navbar{
-	background-color: #E9E9F0;
+	background-color:#9b59b6;
 	color:black;
 	height: 50px;
 	display: block;
@@ -11,7 +11,6 @@ ul.navbar{
 
 ul.navbar li{	
 	/*Position*/
-	color:black;
 	display: inline-block;
 	position: relative;
 	padding: 0 5px 0 5px;
@@ -24,7 +23,7 @@ ul.navbar li a,ul.navbar li div.input,ul.navbar li div.submit{
 	text-align: center;
 	display: block;
 	margin:15px;
-	color:black;
+	color:white;
 	font-style: none;
 	text-decoration: none;
 }
@@ -78,10 +77,11 @@ ul li input{
 
 li.logInForm input[type='submit']{
 	width:auto;
-	padding: 0.2em;
+	padding: .2em;
 	width: 60px;
 	background-color: rgba(52, 73, 94,1.0);
 	color:white;
+	font-size: 16px;
 }
 
 li.logInForm label{
