--- a/app/webroot/css/forms.css
+++ b/app/webroot/css/forms.css
@@ -37,12 +37,13 @@ form div.input input{
 	border: none;
 }
 
-input[type="submit"]{
+input[type="submit"], a.styled{
 	border: none;
 	width: auto;
 	background-color: rgba(0,0,0,0);
 	color:#8e44ad;
 	font-size: 17px;
+	text-decoration: none;
 }
 form div.submit input:hover{
 	cursor: pointer;
