--- a/app/webroot/css/Gmap.css
+++ b/app/webroot/css/Gmap.css
@@ -1,14 +1,11 @@
-div#Gmap{
-	display: block;
-	height: 100%;
+div.Gmap{
+	height: 400px;
 	width: 100%;
-	min-height: 800px;
 }
 
 div#map_canvas{
 	width: 100%;
 	height:100%;
-	min-height: 500px;
 	/*position: absolute;
 	top:0;
 	height: 100%;*/
