--- a/app/webroot/css/navbar.css
+++ b/app/webroot/css/navbar.css
@@ -1,5 +1,7 @@
 ul.navbar{
-	background-color:#9b59b6;
+	/*
+	background-color:#9b59b6;*/
+	background-color: white;
 	color:black;
 	height: 50px;
 	display: block;
@@ -23,7 +25,7 @@ ul.navbar li a,ul.navbar li div.input,ul.navbar li div.submit{
 	text-align: center;
 	display: block;
 	margin:15px;
-	color:white;
+	color:black;
 	font-style: none;
 	text-decoration: none;
 }
@@ -72,7 +74,7 @@ li.logInForm:hover{
 
 ul li input{
 	width:8em;
-	border:none;
+	border:solid black 1px;
 }
 
 li.logInForm input[type='submit']{
