--- a/app/webroot/css/global.css
+++ b/app/webroot/css/global.css
@@ -12,7 +12,7 @@ body{
 	top:0;
 	width:100%;
 	font-family: "Avantgarde", sans-serif;
-	background-image: url(../img/wallpaperHD.jpg);
+	/*background-image: url(../img/wallpaperHD.jpg);
 	background-repeat: no-repeat;
 
 	-webkit-background-size: 100%;
@@ -25,12 +25,13 @@ body{
     -o-background-size: cover;
     background-size: cover;
 
-    height: 200%;
+    height: 200%;*/
+    background-color: rgba(236, 240, 241,1.0);
     font-family: 'Raleway', sans-serif;;
 }
 
 div.content{
-	margin-top: 3em;
+	margin-top: 2em;
 	padding:0;
 	height: 80%;
 }
@@ -54,23 +55,22 @@ p{
 
 
 div.content div.titleDisplay, div.content fieldset{
-	margin-top: 2%;
-	margin-left: 2%;
+	width:80%;
+	margin: auto;
 	padding: 2%;
-	float:left;
 	color:white;
-	display: inline;
-	background-color: rgba(155, 89, 182,1.0);
+	margin-top: 40px;
+	background-color: rgba(52, 152, 219,1.0);
+	/*background-color: rgba(155, 89, 182,1.0);*/
 }
 
 
 div.content div.textDisplay, div.content div.by2{
 	border:solid black 1px;	
-	background-color: rgba(236, 240, 241,1.0);
+	/*background-color: rgba(236, 240, 241,1.0);*/
 }
 
 div.content div.textDisplay {
-	margin-top: 2%;
 	margin-left: 2%;
 	padding:2em;
 	float:left;
@@ -79,11 +79,11 @@ div.content div.textDisplay {
 }
 
 div.rightDisplay{
-	display: inline;
-	width:32%;
-	float:right;
-	margin-right: 3em;
-	padding-top:2%;
+	display: block;
+	width:80%;
+	margin-top: 2em;
+	padding-top:2em;
+	margin: auto;
 }
 
 div.textDisplay p{
@@ -92,18 +92,26 @@ div.textDisplay p{
 }
 
 div.tableDisplay{
-	padding: 1em;
-	margin-bottom: 1em;
-	border:solid black 1px;
-	background-color: rgba(155, 89, 182,0.7);
-	color:white;
+	/*background-color: rgba(155, 89, 182,0.7);*/
+	display: inline-block;
+	color:black;
 }
 
 div.tableDisplay table{
 	margin-left: auto;
 	margin-right: auto;
 	width:100%;
-	max-width: 300px;
+}
+
+div.equals{
+	width:49%;
+}
+
+div.left{
+	float: left;
+}
+div.right{
+	float: right;
 }
 
 /**
@@ -122,10 +130,8 @@ div.textDisplay li
 }
 
 div.concrete{
-	background-color: rgba(236, 240, 241,1.0);
 	color:black;
 }
-
 
 div.gmapHeader{
 	margin:0;
